--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,14 +1,16 @@
-name: CI
+name: Deploy Website
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
+
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ github.token }}
-          environment: production
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
