--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,16 +1,15 @@
-name: Deploy Website
+name: Configure GitHub Pages
 on:
-  push:
+  pull_request:
     branches:
-      - main
-
+    - main
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build-deploy:
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: actions/configure-pages@v3.0.6
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          # GitHub token
+          token: ${{ github.token }}
+          # Try to enable Pages for the repository if it is not already enabled. This option requires a token other than `GITHUB_TOKEN` to be provided. In the context of a Personal Access Token, the `repo` scope or Pages write permission is required. In the context of a GitHub App, the `administration:write` and `pages:write` permissions are required.
+          # enablement: # optional, default is false
