--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,24 +1,31 @@
-name: Deploy PR
+name: Deploy to GitHub Pages
 
 on:
   pull_request:
-    types: [opened]
+    types:
+      - opened
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Build Jekyll site
-      uses: jekyll/actions@v2
-      with:
-        args: build --destination _site
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
-        cname: pr${{ github.event.pull_request.number }}.refdocsio.rootcircle.github.io
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build  # Replace with your build command
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist  # Replace with your build output directory
