--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,7 +1,9 @@
-name: Deploy to GitHub Pages
+name: Deploy PR to GitHub Pages
 
 on:
-  pull_request
+  pull_request:
+    types:
+      - opened
 
 jobs:
   deploy:
@@ -22,8 +24,27 @@ jobs:
       - name: Build
         run: npm run build  # Replace with your build command
 
+      - name: Set unique deploy URL
+        id: set_url
+        run: echo "::set-output name=url::https://pr-${{ github.event.pull_request.number }}.github.io"
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist  # Replace with your build output directory
+          cname: ${{ steps.set_url.outputs.url }}
+
+      - name: Schedule branch deletion
+        uses: repo-sync/pull-request@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event_type: schedule
+          schedule: '*/30 * * * *'  # Customize the schedule as per your preference
+
+      - name: Delete branch
+        uses: repo-sync/pull-request@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          event_type: delete
+          branches: ${{ github.event.pull_request.head.ref }}
