--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: amondnet/vercel-action@v25
         with:
           # Vercel token
-          vercel-token: ${secrets.VERCEL_TOKEN}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
