--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    types: [opened, synchronize, closed]
+    branches:
+      - main
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
@@ -19,3 +23,4 @@ jobs:
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+      
